--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
 		"babel-loader": "^7.1.2",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.8",
 		"css-loader": "^0.28.7",
-		"expo": "^22.0.0",
+		"expo": "^22.0.2",
 		"npm-install-version": "^6.0.2",
 		"react": "16.0.0-beta.5",
 		"react-dom": "15.6",
 		"react-hot-loader": "^1.3.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-22.0.1.tar.gz",
+		"react-native-gesture-handler": "^1.0.0-alpha.29",
 		"react-native-svg": "^5.4.2",
 		"react-native-svg-uri": "^1.2.1",
 		"react-native-svg-web": "^1.0.1",
