--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest",
-		"web": "webpack-dev-server -d --config ./webpack.config.js --inline --hot --colors --open"
+		"web": "webpack-dev-server -d --config ./webpack.config.js --inline --hot --colors --open",
+		"android": "exp build:android"
 	},
 	"dependencies": {
 		"babel-cli": "^6.26.0",
@@ -17,16 +18,18 @@
 		"react": "16.0.0-alpha.12",
 		"react-dom": "15.6",
 		"react-hot-loader": "^1.3.1",
-		"react-native": "0.48.1",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
 		"react-native-web": "^0.0.120",
 		"react-tap-event-plugin": "^2.0.1",
 		"react-v-15.6": "^15.6.1",
 		"style-loader": "^0.18.2",
 		"url-loader": "^0.5.9",
 		"webpack": "^3.5.6",
-		"webpack-dev-server": "^2.7.1"
+		"webpack-dev-server": "^2.7.1",
+		"react-native-blur": "@3.0.0-alpha"
 	},
 	"devDependencies": {
+		"exp": "^45.1.0",
 		"babel-jest": "21.0.0",
 		"babel-preset-react-native": "3.0.2",
 		"jest": "21.0.1",
