--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.8",
 		"css-loader": "^0.28.7",
 		"expo": "^22.0.2",
+		"firebase": "^4.6.2",
 		"npm-install-version": "^6.0.2",
 		"react": "16.0.0-beta.5",
 		"react-dom": "15.6",
@@ -29,6 +30,7 @@
 		"react-native-web": "^0.0.120",
 		"react-tap-event-plugin": "^2.0.1",
 		"react-v-15.6": "^15.6.1",
+		"source-map-loader": "^0.2.3",
 		"style-loader": "^0.18.2",
 		"styled-components": "^2.2.3",
 		"svgs": "^3.1.0",
