--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"firebase": "^4.6.2",
 		"npm-install-version": "^6.0.2",
 		"react": "16.0.0-beta.5",
+		"react-animation-frame": "^1.0.1",
 		"react-dom": "15.6",
 		"react-hot-loader": "^1.3.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-22.0.1.tar.gz",
