--- a/package.json
+++ b/package.json
@@ -29,8 +29,15 @@
 		"react-native-svg-uri": "^1.2.1",
 		"react-native-svg-web": "^1.0.1",
 		"react-native-web": "^0.0.120",
+		"react-redux": "^5.0.6",
 		"react-tap-event-plugin": "^2.0.1",
 		"react-v-15.6": "^15.6.1",
+		"redux": "^3.7.2",
+		"redux-debounce": "^1.0.1",
+		"redux-debounced": "^0.4.0",
+		"redux-thunk": "^2.2.0",
+		"redux-worker-middleware": "^1.0.0",
+		"reselect": "^3.0.1",
 		"source-map-loader": "^0.2.3",
 		"style-loader": "^0.18.2",
 		"styled-components": "^2.2.3",
@@ -44,6 +51,9 @@
 		"babel-preset-react-native": "3.0.2",
 		"jest": "21.0.1",
 		"react-test-renderer": "16.0.0-alpha.12",
+		"redux-devtools": "^3.4.1",
+		"redux-devtools-extension": "^2.13.2",
+		"remote-redux-devtools": "^0.5.12",
 		"svg-inline-loader": "^0.8.0"
 	},
 	"jest": {
