--- a/src/package.json
+++ b/src/package.json
@@ -26,7 +26,7 @@
 		"url-loader": "^0.5.9",
 		"webpack": "^3.5.6",
 		"webpack-dev-server": "^2.7.1",
-		"react-native-blur": "@3.0.0-alpha"
+		"react-native-blur": "3.2.2"
 	},
 	"devDependencies": {
 		"exp": "^45.1.0",
